7.0.12
------
* Add ability to override the ActiveJob queue names in initializer file

7.0.11
------
* Pass configured resources (like webhooks or scripttags) into the job rather than reading the config again. This allows for dynamically setting ShopifyApp config in a web request and having the job handle it correctly. This change does not affect the usage of webhooks or scripttags

7.0.10
-----
* Loosen Rails dependency requirements to `>= 4.2.6` and allow Rails 5.0
* Add support for App Proxies

7.0.9
-----

* Remove http-equiv meta tag as it causes OAuth issues in Chrome

7.0.5
-----

* Remove obtrusive “Continue” text in redirects

7.0.4
-----

* Bump required shopify_api version to 4.x.

7.0.3
-----

* Bump required Rails version to >= 4.2.6 since we are now using ActiveSupport::SecurityUtils:Module

7.0.2
-----

* Fix CSRF redirect issue

7.0.1
-----

* add support to i18n for flash messages (English and Spanish).

7.0.0
-----

* rename WebhooksController module to WebhookVerification
* added a WebhooksController which automatically delegates to jobs
* moved all engine controllers under the ShopifyApp namespace
* rename SessionsController module to SessionsConcern
* more robust redirects, with valid HTML in HTTP response bodies
* `ShopifyApp::Controller` has been removed. You’ll need to replace all includes of `ShopifyApp::Controller` with `ShopifyApp::LoginProtection`
* adds add_webhook generator to make it easier to add new webhooks to your app
* update the install generator to use standard rails generate arguments, usage has changed from `-api_key=your_key` to `--api_key your_key`
* remove the redirect uri - this is done automatically inside omniauth now

6.4.2
-----

* Update minimum required rails version to 4.2 to include active job

6.4.0
-----

* More semantic and accessible markup in the sessions/new, embedded_app, and product
  index views.
* Moved all JavaScript to load at the bottom of the page instead of the head, for